fetching and showing data in a grid

--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,126 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  font-family: Inter, sans-serif;
+  font-feature-settings: "liga" 1, "calt" 1;
+}
+
+@supports (font-variation-settings: normal) {
+  :root {
+    font-family: InterVariable, sans-serif;
+  }
+}
+
+.table-container {
+  margin: 20px auto;
+  max-width: 700px;
+  text-align: center;
+}
+
+.styled-table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 16px;
+  text-align: right;
+}
+
+.styled-table thead tr {
+  background-color: #449f6f;
+  color: #ffffff;
+  text-align: center;
+  font-weight: bold;
+}
+
+.styled-table th,
+.styled-table td {
+  padding: 12px;
+  border: 1px solid #dddddd;
+}
+
+.styled-table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody td:first-of-type {
+  text-align: center;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+  border-bottom: 2px solid #449f6f;
+}
+
+.styled-table tbody tr:hover {
+  background-color: rgba(68, 159, 111, 0.2);
+}
+
+.pagination-controls {
+  margin: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.pagination-controls button {
+  background-color: #449f6f;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 14px;
+}
+
+.pagination-controls button:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
+
+.pagination-controls span {
+  font-size: 16px;
+}
+
+.active-page {
+  color: #449f6f;
+}
+
+.loading-cell {
+  text-align: center;
+  font-size: 16px;
+  color: #555;
+  padding: 20px;
+}
+
+.loading-text {
+  font-size: 14px;
+}
+
+.spinner {
+  margin-inline: auto;
+  margin-bottom: 10px;
+  width: 20px;
+  height: 20px;
+  border: 3px solid #f3f3f3;
+  border-top: 3px solid #009879;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.error-cell {
+  text-align: center;
+  font-size: 16px;
+  color: #ff4d4d;
+  padding: 20px;
 }
